Add photo management and category macro parser